# jcds

./: .coverage  .envrc  .gitcliff.toml  .gitignore  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  dqr_cont.py  environment.yml  index.html  jcds.py  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  setup.py
.github/workflows/: python-app.yml  python-ci.yml
Metrics/: __init__.py  confusion.py
api/: index.html
docs/: api.md  getting_started.md  index.md
examples/: eda_workflow.ipynb  help_function.ipynb
getting_started/: index.html
jcds/: __init__.py  utils.py  utils_formatting.py
jcds.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
jcds/Metrics/: confusion.py
jcds/Quality/: __init__.py  reports.py
jcds/aws/: __init__.py  s3.py  s3_utils.py
jcds/charts/: __init__.py  roc.py
jcds/dataio/: __init__.py  io_utils.py  s3_io.py
jcds/eda/: __init__.py  datetime.py  eda_helpers.py  inspect.py  lists.py  multivariate.py  reports.py  start.py  transform.py  univariate.py
jcds/examples/: eda_workflow.ipynb  (+1 more)
metrics/: __init__.py
quality/: quality.py
search/: search_index.json
site/: 404.html  index.html  objects.inv
test/: test.ipynb  test_aws.ipynb  test_charts.ipynb  test_eda.ipynb
tests/: conftest.py  test_charts.py  test_datetime.py  test_help.py  test_inspect copy.py-bkp  test_inspect.py  test_io_utils.py  test_multivariate.py  test_outliers.py  test_reports.py  test_s3_utils.py  test_transform.py  test_transform_module.py  test_univariate.py
(+50 files in other folders)
